# tiktok-mcp

./: .gitignore  .markdownlint.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/scripts/: wait_for_pypi.sh
.github/workflows/: ci.yml  distribution-smoke.yml  release-please.yml  release-spike.yml  release.yml
.omo/evidence/: task-24-upload-image.json  task-24-upload-video-chunked.json
.omo/notepads/tiktok-mcp/: learnings.md
.omo/plans/: tiktok-mcp.md
docs/: api-surface-inventory.md  auth-architecture.md  conventions.md  pending-publisher-bootstrap.md  release.md  security-model.md
spikes/: live_comments_read_e2e.py  s1_redirect.py  s1_results.md  s2_results.md  s3_results.md  s3_vcr.py  test_s1_redirect.py  test_s3_vcr.py
spikes/release-spike/: README.md  pyproject.toml
spikes/release-spike/src/tiktok_mcp/: __main__.py
src/tiktok_mcp/: __init__.py  __main__.py  decorators.py  envelopes.py  server.py
src/tiktok_mcp/api/: __init__.py
src/tiktok_mcp/auth/: __init__.py  app_credentials.py  fingerprint.py  http_sanitizer.py  keychain.py  redactor.py  state.py  url_parser.py
src/tiktok_mcp/internal/: __init__.py  tool_registry.py
src/tiktok_mcp/marketing/: asset_chunker.py  audience_hashing.py
src/tiktok_mcp/observability/: rate_limit_tracker.py
src/tiktok_mcp/prompts/: __init__.py  templates.py
src/tiktok_mcp/resources/: accounts.py
src/tiktok_mcp/tools/: __init__.py  accounts.py  app_credentials.py  comments_read.py  comments_writes.py  display_read.py  marketing_read.py  marketing_reports.py  marketing_writes_adgroups.py  marketing_writes_ads.py  (+8 more)
tests/: __init__.py  conftest.py  test_smoke.py
tests/cassettes/: comments_list.yaml  comments_replies.yaml
tests/docs/: check_links.py  cross_ref.py  validate_mermaid.py  validate_readme_json.py  validate_security_matrix.py
tests/integration/: __init__.py  test_accounts.py  test_adgroups_writes_replay.py  test_ads_writes_replay.py  test_app_credentials.py  test_audiences_writes_replay.py  test_business_client.py  test_campaigns_writes_replay.py  test_comments_read.py  test_comments_writes_replay.py  test_creatives_writes_replay.py  test_display_client.py  test_display_read.py  test_drafts_writes_replay.py  test_marketing_read.py  test_marketing_reports.py  test_posting_read.py  test_prompts_e2e.py  test_pull_photo_replay.py  test_resources_e2e.py  test_stdio_boot.py  test_video_upload_replay.py
tests/lint/: test_tool_inventory.py
tests/unit/: __init__.py  test_accounts.py  test_adgroups_writes.py  test_ads_writes.py  test_audiences_writes.py  test_campaigns_writes.py  test_comments_writes.py  test_creatives_writes.py  test_decorators.py  test_drafts_writes.py  test_envelopes.py  test_keychain.py  test_marketing_read.py  test_prompts.py  test_pull_photo_writes.py  test_rate_limit.py  test_redactor.py  test_resources_accounts.py  test_state.py  test_types.py  test_video_upload_writes.py
(+48 files in other folders)
